--- a/.render.yaml
+++ b/.render.yaml
@@ -6,4 +6,5 @@ services:
     region: oregon
     pythonVersion: 3.10.13
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn src.api_server:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn src.api_server:app --host 0.0.0.0 --port $PORT
+
