--- a/.render.yaml
+++ b/.render.yaml
@@ -5,6 +5,6 @@ services:
     plan: free
     region: oregon
     pythonVersion: 3.10.13
-    buildCommand: pip install -r requirements.txt
+    buildCommand: ./fetch_data.sh && pip install -r requirements.txt
     startCommand: uvicorn src.api_server:app --host 0.0.0.0 --port $PORT
 
